--- a/public/roundWin/index.html
+++ b/public/roundWin/index.html
@@ -6,6 +6,6 @@
       <script src="http://localhost:4545/wait/renderer.js"></script>
    </head>
    <body>
-      Wait
+      Round win
    </body>
 </html>
