--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -3,7 +3,8 @@
       <title>Wait</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
-      <script src="http://localhost:4545/wait/renderer.js"></script>
+      <script src="http://localhost:4545/betwenRound/renderer.js"></script>
+      <link rel="stylesheet" href="/style.css">
    </head>
    <body>
       Round
