--- a/public/overTime/index.html
+++ b/public/overTime/index.html
@@ -3,10 +3,9 @@
       <title>Wait</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
-      <script src="http://localhost:4545/roundWin/renderer.js"></script>
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      Round win
+      Overtime
    </body>
 </html>
