--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -3,9 +3,10 @@
       <title>Wait</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
-      <script src="http://localhost:4545/wait/renderer.js"></script>
+      <script src="http://localhost:4545/starting/renderer.js"></script>
+      <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      Betwenn Round
+      Starting
    </body>
 </html>
