--- a/public/wait/index.html
+++ b/public/wait/index.html
@@ -4,6 +4,7 @@
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
       <script src="http://localhost:4545/wait/renderer.js"></script>
+      <link rel="stylesheet" href="/style.css">
    </head>
    <body>
       Wait
