--- a/ui/index.html
+++ b/ui/index.html
@@ -25,5 +25,8 @@
       <label for="overlay-autolaunch"><input type="checkbox" id="overlay-autolaunch" /> Auto-launch</label>
       <button id="launch-overlay-server">Launch overlay server</button>
     </div>
+    <div>
+      <select id="scenes"></select>
+    </div>
   </body>
 </html>
