waiting + starting pas fini

--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -7,6 +7,38 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      Starting
+      <img id="overlayStart" src="http://localhost:4545/assets/overlay/starting.png">
+      <img id="teamAStart" src="https://vrmasterleague.com/images/logos/teams/b2755426-34eb-4760-931c-ba66ce732492.jpg">
+      <img id="teamBStart" src="https://vrmasterleague.com/images/logos/teams/b2755426-34eb-4760-931c-ba66ce732492.jpg">
+      <img id="rankAStart" src="https://vrmasterleague.com/images/div_platinum_3_40.png">
+      <img id="rankBStart" src="https://vrmasterleague.com/images/div_platinum_3_40.png">
+      <a id="nbA">18th</a>
+      <a id="nbB">18th</a>
+      <div class="nameBar">
+         <div>
+            <a id="teamNameA">NothingToLoose</a>
+         </div>
+         <div>
+            <a id="teamNameB">NothingToLoose</a>
+         </div>
+      </div>
+      <a id="weekStart">Week 4</a>
+
+      <div class="contain">
+         <div id="containerA">
+            <a>notblue</a>
+            <a>Moozor</a>
+            <a>Kolalagirl</a>
+            <a>MakingOOF</a>
+            <a>AngryFight</a>
+         </div>
+         <div id="containerB">
+            <a>notblue</a>
+            <a>notblue</a>
+            <a>notblue</a>
+            <a>notblue</a>
+         </div>
+      </div>
+
    </body>
 </html>
