--- a/public/wait/index.html
+++ b/public/wait/index.html
@@ -7,6 +7,10 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      
+      <img id="overlayWait" src="http://localhost:4545/assets/overlay/wait.png">
+      <img id="teamAWait">
+      <img id="teamBWait">
+      <a id="weekWait"></a>
+      <a id="timerWait"></a>
    </body>
 </html>
