--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -34,9 +34,10 @@
          </div>
          <div id="containerB">
             <a>notblue</a>
-            <a>notblue</a>
-            <a>notblue</a>
-            <a>notblue</a>
+            <a>Moozor</a>
+            <a>Kolalagirl</a>
+            <a>aaaaaaaaaaaaaaaaaaaa</a>
+            <a>AngryFight</a>
          </div>
       </div>
 
