--- a/public/wait/index.html
+++ b/public/wait/index.html
@@ -5,12 +5,13 @@
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
       <script src="http://localhost:4545/wait/renderer.js"></script>
       <link rel="stylesheet" href="/style.css">
+      <link rel="stylesheet" href="/wait/style.css">
    </head>
    <body>
-      <img id="overlayWait" src="http://localhost:4545/assets/overlay/wait.png">
-      <img id="teamAWait">
-      <img id="teamBWait">
-      <a id="weekWait"></a>
-      <a id="timerWait"></a>
+      <div class="background">
+         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/waiting.svg" ></object>
+         <a id="weekWait"></a>
+         <a id="timerWait"></a>
+      </div>
    </body>
 </html>
