--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -4,33 +4,34 @@
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
       <script src="http://localhost:4545/starting/renderer.js"></script>
+      <link rel="stylesheet" href="/starting/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <img id="overlayStart" src="http://localhost:4545/assets/overlay/starting.png">
-      <img id="teamAStart">
-      <img id="teamBStart">
-      <img id="rankAStart">
-      <img id="rankBStart">
-      <div class="place">
-         <a id="nbA"></a>
-         <a id="nbB"></a>
+      <div class="background">
+         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/starting.svg" ></object>
       </div>
-      <div class="nameBar">
-         <div class="containNameStart">
-            <a id="teamNameA"></a>
-         </div>
-         <div class="containNameStartB">
-            <a id="teamNameB"></a>
-         </div>
-      </div>
-      <a id="weekStart"></a>
 
-      <div class="contain">
-         <div id="containerA">
+      <div class="content">
+         <div class="place">
+            <a id="nbA"></a>
+            <a id="nbB"></a>
          </div>
-         <div id="containerB">
+         <div class="nameBar">
+            <div class="containNameStart">
+               <a id="teamNameA"></a>
+            </div>
+            <div class="containNameStartB">
+               <a id="teamNameB"></a>
+            </div>
          </div>
+   
+         <div class="contain">
+            <div id="containerA">
+            </div>
+            <div id="containerB">
+            </div>
+         </div> 
       </div>
 
    </body>
