--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -4,9 +4,43 @@
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
       <script src="http://localhost:4545/betwenRound/renderer.js"></script>
+      <link rel="stylesheet" href="/betwenRound/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      Round
+      <div class="background">
+         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/betwen.svg" ></object>
+      </div>
+
+      <div class="content">
+         <div class="place">
+            <a id="nbA"></a>
+            <a id="nbB"></a>
+         </div>
+         <div class="nameBar">
+            <div class="containNameStart">
+               <a id="teamNameA"></a>
+            </div>
+            <div class="containNameStartB">
+               <a id="teamNameB"></a>
+            </div>
+         </div>
+      </div>
+
+      <div class="containScore">
+         <div class="item">
+            <a id="1B"></a>
+            <a id="1O"></a>
+         </div>
+         <div class="item">
+            <a id="2B"></a>
+            <a id="2O"></a>
+         </div>
+         <div class="item">
+            <a id="3B"></a>
+            <a id="3O"></a>
+         </div>
+      </div>
+
    </body>
 </html>
