--- a/public/game/index.html
+++ b/public/game/index.html
@@ -12,14 +12,16 @@
          <object class="svgClass" type="image/svg+xml" data="/assets/overlay/top.svg" >
          </object>
       </div>
-
-      <a class="teamA txt">NOTHINGTOLOSE</a>
-      <a class="teamB txt">GRAVITY</a>
-
       <div class="content">
-         <a id="blue">5</a>
-         <a id="orange">11</a>
-         <a id="timing">5:45</a>
+         <a id="blue"></a>
+         <a id="timing"></a>
+         <a id="orange"></a>
+      </div>
+      <div class="divA">
+         <a class="txt" id="teamA"></a>
+      </div>
+      <div class="divB">
+         <a class="txt" id="teamB"></a>
       </div>
    </body>
 </html>
