--- a/public/possess/index.html
+++ b/public/possess/index.html
@@ -8,8 +8,19 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <!-- <div class="background">
-         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/top.svg" ></object>
-      </div> -->
+      <div class="background">
+         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/poss.svg" ></object>
+      </div>
+
+      <div class="content">
+         <div class="div1 blue"><a></a></div>
+         <div class="div2 blue"><a></a></div>
+         <div class="div3 blue"><a></a></div>
+         <div class="div4 blue"><a></a></div>
+         <div class="div5 orange"><a></a></div>
+         <div class="div6 orange"><a></a></div>
+         <div class="div7 orange"><a></a></div>
+         <div class="div8 orange"><a></a></div>
+      </div>
    </body>
 </html>
