Fix config and save new selected team

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,6 +9,12 @@
     <title>Echo Arena Overlay</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>Dashboard</li>
+        <li>Scenes configuration</li>
+      </ul>
+    </nav>
     <div>
       <label for="echo-arena-url">Echo Arena url</label><input type="text" id="echo-arena-url" /><input type="text" id="echo-arena-port" />
       <label for="echo-arena-autoconnect"><input type="checkbox" id="echo-arena-autoconnect" /> Auto-connect</label>
