--- a/public/scoreboardB/index.html
+++ b/public/scoreboardB/index.html
@@ -8,8 +8,56 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <!-- <div class="background">
-         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/top.svg" ></object>
-      </div> -->
+      <div class="background">
+         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/stat.svg" ></object>
+      </div>
+
+      <div class="content">
+         <div class="row">
+            <a class="st">Making-Off</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+         </div>
+         <div class="row">
+            <a class="st">Making-Off</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+         </div>
+         <div class="row">
+            <a class="st">Making-Off</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+         </div>
+         <div class="row">
+            <a class="st">Making-Off</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+         </div>
+         <div class="row">
+            <a class="st"></a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>5</a>
+            <a>1:50</a>
+         </div>
+      </div>
    </body>
 </html>
