--- a/public/shot/index.html
+++ b/public/shot/index.html
@@ -8,21 +8,21 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <div class="all hide" id="component">
+      <div class="all" id="component">
          <div class="background">
             <object class="svgClass" type="image/svg+xml" data="/assets/overlay/shot.svg" ></object>
          </div>
    
          <div class="content">
-            <a id="nb">83</a>
+            <a id="nb"></a>
             <div class="score">
-               <a id="pseudo">makingOFF</a>
-               <a id="assist">assisted by kolalagirl</a>
+               <a id="pseudo"></a>
+               <a id="assist"></a>
             </div>
             <div class="contain">
-               <div class="wd"><a id="points">3</a></div>
-               <div class="wd speeddiv"><a id="speed">18m/s</a></div>
-               <div class="wd distdiv"><a id="dist">12m</a></div>
+               <div class="wd"><a id="points"></a></div>
+               <div class="wd speeddiv"><a id="speed"></a></div>
+               <div class="wd distdiv"><a id="dist"></a></div>
             </div>
    
          </div>
