--- a/public/wait/index.html
+++ b/public/wait/index.html
@@ -11,5 +11,7 @@
       <div class="background">
          <object class="svgClass" type="image/svg+xml" data="/assets/overlay/waiting.svg" ></object>
       </div>
+
+      <a id="timer"></a>
    </body>
 </html>
