--- a/public/game/index.html
+++ b/public/game/index.html
@@ -13,9 +13,9 @@
          </object>
       </div>
       <div class="content">
-         <a id="blue"></a>
+         <a id="blue">0</a>
          <a id="timing"></a>
-         <a id="orange"></a>
+         <a id="orange">0</a>
       </div>
       <div class="divA">
          <a class="txt" id="teamA"></a>
