color working with VRML

--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -19,10 +19,10 @@
          </div>
          <div class="nameBar">
             <div class="containNameStart">
-               <a id="teamNameA">BLUE TEAM</a>
+               <a id="teamNameA">ORANGE TEAM</a>
             </div>
             <div class="containNameStartB">
-               <a id="teamNameB">ORANGE TEAM</a>
+               <a id="teamNameB">BLUE TEAM</a>
             </div>
          </div>
    
