--- a/ui/index.html
+++ b/ui/index.html
@@ -79,6 +79,7 @@
               <td><select id="scene[0]" class="scene-select" type="text"></td>
               <td><input id="duration[0]" type="number" min="1"/>s</td>
               <td><button>-</button></td>
+              <td><label for="event"><input type="checkbox" id="event"/> Enable this event</label></td>
             </tr>
           </tbody>
         </table>
@@ -99,8 +100,8 @@
               <td><button>-</button></td>
             </tr>
             <tr>
-              <td><select id="start-scene[0]" class="scene-select" type="text"></td>
-              <td><input id="start-duration[0]" type="number" min="1"/>s</td>
+              <td><select id="end-scene[0]" class="scene-select" type="text"></td>
+              <td><input id="end-duration[0]" type="number" min="1"/>s</td>
               <td><button>-</button></td>
             </tr>
           </tbody>
