--- a/ui/index.html
+++ b/ui/index.html
@@ -33,6 +33,7 @@
     </div>
     <div class="block">
       <h2>VRML Mode</h2>
+      <label for="vrml-autoconnect"><input type="checkbox" id="vrml-autoconnect" />Auto-Load-Match</label>
       <label for="vrmlMatch"><input type="checkbox" id="vrmlMatch"/> VRML Next Match</label>
       <label for="teams">Team</label><select id="teams"></select>
       <div id="matchData" class="hidden"></div>
