--- a/public/wait/index.html
+++ b/public/wait/index.html
@@ -8,10 +8,33 @@
       <link rel="stylesheet" href="/wait/style.css">
    </head>
    <body>
-      <div class="background">
-         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/waiting.svg" ></object>
+      
+      <img src="/assets/disc.svg" class="logo"/>
+      <div class="teams">
+         <div class="orange">
+            <img class="ColorLogo"/ id="Blue">
+            <div class="boxOrange">
+               <a class="teamColor" id="OrangeName"></a>
+            </div>
+            <a class="colorOrange">ORANGE</a>
+         </div>
+         <div class="blue">
+            <img class="ColorLogo" id="Orange"/>
+            <div class="boxBlue">
+               <a class="teamColor" id="BlueName"></a>
+            </div>
+            <a class="colorBlue">BLUE</a>
+         </div>
       </div>
 
-      <a id="timer"></a>
+      <div class="content">
+         <img src="/assets/echo2.png" class="echo"/>
+         <a id="week"></a>
+         <a class="vs">VS</a>
+         <a>Master Division</a>
+         <a>Best Of 3</a>
+         <a id="timer"></a>
+      </div>
+
    </body>
 </html>
