--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -8,7 +8,27 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <div class="background">
+      <img src="/assets/disc.svg" class="logo"/>
+
+      <div class="top">
+         <img src="/assets/echo2.png" class="echo"/>
+         <a class="title">VRML WEEK 10</a>
+      </div>
+
+      <div class="loading-box-container">
+         <div class="loading-box">
+           <p>YOUR GAMEPLAY HERE</p>
+         </div>
+      </div>
+
+      <div class="bottom">
+         <a>Master Division</a>
+         <a>Best Of 3</a>
+      </div>
+
+
+
+      <!-- <div class="background">
          <object class="svgClass" type="image/svg+xml" data="/assets/overlay/starting.svg" ></object>
       </div>
 
@@ -32,7 +52,7 @@
             <div id="containerB">
             </div>
          </div> 
-      </div>
+      </div> -->
 
    </body>
 </html>
