--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -12,12 +12,44 @@
 
       <div class="top">
          <img src="/assets/echo2.png" class="echo"/>
-         <a class="title">VRML WEEK 10</a>
+         <a class="title" id="week">VRML WEEK 10</a>
       </div>
 
       <div class="loading-box-container">
          <div class="loading-box">
            <p>YOUR GAMEPLAY HERE</p>
+         </div>
+      </div>
+
+      <div class="teams">
+         <div class="orange">
+            <img class="logoOrange" id="OLOGO">
+            <div class="boxOrange">
+               <a class="teamColor" id="OrangeName"></a>
+            </div>
+            <div class="boxOrangePlayers" id="BoxOrange">
+               <div class="row o"><a></a></div>
+               <div class="row o"><a></a></div>
+               <div class="row o"><a></a></div>
+               <div class="row o"><a></a></div>
+               <div class="row o"><a></a></div>
+               <div class="row o"><a></a></div>
+            </div>
+         </div>
+
+         <div class="blue">
+            <img class="logoBlue" id="BLOGO">
+            <div class="boxBlue">
+               <a class="teamColor" id="BlueName"></a>
+            </div>
+            <div class="boxBluePlayers" id="BoxBlue">
+               <div class="row b"><a></a></div>
+               <div class="row b"><a></a></div>
+               <div class="row b"><a></a></div>
+               <div class="row b"><a></a></div>
+               <div class="row b"><a></a></div>
+               <div class="row b"><a></a></div>
+            </div>
          </div>
       </div>
 
