--- a/public/shot/index.html
+++ b/public/shot/index.html
@@ -8,26 +8,11 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <div class="all" id="component">
-         <div class="background">
-            <object class="svgClass" type="image/svg+xml" data="/assets/overlay/shot.svg" ></object>
-         </div>
-   
-         <div class="content">
-            <a id="nb"></a>
-            <div class="score">
-               <a id="pseudo"></a>
-               <a id="assist"> </a>
-            </div>
-            <div class="contain">
-               <div class="wd"><a id="points"></a></div>
-               <div class="wd speeddiv"><a id="speed"></a></div>
-               <div class="wd distdiv"><a id="dist"></a></div>
-            </div>
-   
+      <div class="replay-container">
+         <div class="replay-box">
+            <p class="here">YOUR REPLAY HERE</p>
+            <p class="replay">REPLAY</p>
          </div>
       </div>
-
-
    </body>
 </html>
