--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -8,83 +8,57 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <img src="/assets/disc.svg" class="logo"/>
+      <div class="background">
+         <img src="/assets/disc.svg" class="logo"/>
 
-      <div class="top">
-         <img src="/assets/echo2.png" class="echo"/>
-         <a class="title" id="week">VRML WEEK 10</a>
-      </div>
-
-      <div class="loading-box-container">
-         <div class="loading-box">
-           <p>YOUR GAMEPLAY HERE</p>
+         <div class="top">
+            <img src="/assets/echo2.png" class="echo"/>
+            <a class="title" id="week">VRML WEEK 10</a>
          </div>
-      </div>
 
-      <div class="teams">
-         <div class="orange">
-            <img class="logoOrange" id="OLOGO">
-            <div class="boxOrange">
-               <a class="teamColor" id="OrangeName"></a>
-            </div>
-            <div class="boxOrangePlayers" id="BoxOrange">
-               <div class="row o"><a></a></div>
-               <div class="row o"><a></a></div>
-               <div class="row o"><a></a></div>
-               <div class="row o"><a></a></div>
-               <div class="row o"><a></a></div>
-               <div class="row o"><a></a></div>
+         <div class="loading-box-container">
+            <div class="loading-box">
+            <p>YOUR GAMEPLAY HERE</p>
             </div>
          </div>
 
-         <div class="blue">
-            <img class="logoBlue" id="BLOGO">
-            <div class="boxBlue">
-               <a class="teamColor" id="BlueName"></a>
+         <div class="teams">
+            <div class="orange">
+               <img class="logoOrange" id="OLOGO">
+               <div class="boxOrange">
+                  <a class="teamColor" id="OrangeName"></a>
+               </div>
+               <div class="boxOrangePlayers" id="BoxOrange">
+                  <div class="row o"><a></a></div>
+                  <div class="row o"><a></a></div>
+                  <div class="row o"><a></a></div>
+                  <div class="row o"><a></a></div>
+                  <div class="row o"><a></a></div>
+                  <div class="row o"><a></a></div>
+               </div>
             </div>
-            <div class="boxBluePlayers" id="BoxBlue">
-               <div class="row b"><a></a></div>
-               <div class="row b"><a></a></div>
-               <div class="row b"><a></a></div>
-               <div class="row b"><a></a></div>
-               <div class="row b"><a></a></div>
-               <div class="row b"><a></a></div>
-            </div>
-         </div>
-      </div>
 
-      <div class="bottom">
-         <a>Master Division</a>
-         <a>Best Of 3</a>
-      </div>
-
-
-
-      <!-- <div class="background">
-         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/starting.svg" ></object>
-      </div>
-
-      <div class="content">
-         <div class="place">
-            <a id="nbA">Blue</a>
-            <a id="nbB">Orange</a>
-         </div>
-         <div class="nameBar">
-            <div class="containNameStart">
-               <a id="teamNameA">ORANGE TEAM</a>
-            </div>
-            <div class="containNameStartB">
-               <a id="teamNameB">BLUE TEAM</a>
+            <div class="blue">
+               <img class="logoBlue" id="BLOGO">
+               <div class="boxBlue">
+                  <a class="teamColor" id="BlueName"></a>
+               </div>
+               <div class="boxBluePlayers" id="BoxBlue">
+                  <div class="row b"><a></a></div>
+                  <div class="row b"><a></a></div>
+                  <div class="row b"><a></a></div>
+                  <div class="row b"><a></a></div>
+                  <div class="row b"><a></a></div>
+                  <div class="row b"><a></a></div>
+               </div>
             </div>
          </div>
-   
-         <div class="contain">
-            <div id="containerA">
-            </div>
-            <div id="containerB">
-            </div>
-         </div> 
-      </div> -->
 
+         <div class="bottom">
+            <a>Master Division</a>
+            <a>Best Of 3</a>
+         </div>
+
+      </div>
    </body>
 </html>
