--- a/public/wait/index.html
+++ b/public/wait/index.html
@@ -9,31 +9,33 @@
    </head>
    <body>
       
-      <img src="/assets/disc.svg" class="logo"/>
-      <div class="teams">
-         <div class="orange">
-            <img class="ColorLogo"/ id="Blue">
-            <div class="boxOrange">
-               <a class="teamColor" id="OrangeName"></a>
+      <div class="background">
+         <img src="/assets/disc.svg" class="logo"/>
+         <div class="teams">
+            <div class="orange">
+               <img class="ColorLogo"/ id="Blue">
+               <div class="boxOrange">
+                  <a class="teamColor" id="OrangeName"></a>
+               </div>
+               <a class="colorOrange">ORANGE</a>
             </div>
-            <a class="colorOrange">ORANGE</a>
-         </div>
-         <div class="blue">
-            <img class="ColorLogo" id="Orange"/>
-            <div class="boxBlue">
-               <a class="teamColor" id="BlueName"></a>
+            <div class="blue">
+               <img class="ColorLogo" id="Orange"/>
+               <div class="boxBlue">
+                  <a class="teamColor" id="BlueName"></a>
+               </div>
+               <a class="colorBlue">BLUE</a>
             </div>
-            <a class="colorBlue">BLUE</a>
          </div>
-      </div>
-
-      <div class="content">
-         <img src="/assets/echo2.png" class="echo"/>
-         <a id="week"></a>
-         <a class="vs">VS</a>
-         <a>Master Division</a>
-         <a>Best Of 3</a>
-         <a id="timer"></a>
+   
+         <div class="content">
+            <img src="/assets/echo2.png" class="echo"/>
+            <a id="week"></a>
+            <a class="vs">VS</a>
+            <a>Master Division</a>
+            <a>Best Of 3</a>
+            <a id="timer"></a>
+         </div>
       </div>
 
    </body>
