--- a/public/shot/index.html
+++ b/public/shot/index.html
@@ -7,11 +7,28 @@
       <link rel="stylesheet" href="/shot/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
-   <body>
+   <body id="comp">
       <div class="replay-container">
          <div class="replay-box">
             <p class="here">YOUR REPLAY HERE</p>
             <p class="replay">REPLAY</p>
+         </div>
+      </div>
+
+      <div class="score">
+         <div class="container">
+            <a class="scored">Scored By</a>
+            <div class="box o" id="box">
+               <a id="pseudo" class="nick"></a>
+            </div>
+            <div class="box-stat">
+               <a id="dist"></a>
+               <a id="speed" ></a>
+               <a id="points" ></a>
+            </div>
+            <div class="txt">
+               <a id="assist" class="assist"></a>
+            </div>
          </div>
       </div>
    </body>
