--- a/public/shot/index.html
+++ b/public/shot/index.html
@@ -18,7 +18,7 @@
       <div class="score">
          <div class="container">
             <a class="scored">Scored By</a>
-            <div class="box o" id="box">
+            <div class="box" id="box">
                <a id="pseudo" class="nick"></a>
             </div>
             <div class="box-stat">
