--- a/public/shot/index.html
+++ b/public/shot/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body id="comp">
-      <div class="replay-container">
+      <div id="gradient">
          <div class="replay-box">
             <p class="here">YOUR REPLAY HERE</p>
             <p class="replay">REPLAY</p>
