--- a/public/game/index.html
+++ b/public/game/index.html
@@ -9,7 +9,7 @@
    </head>
    <body>
       <div class="topBar">
-         <img id="logoA" src="/assets/temp.png">
+         <img id="logoA">
          <div class="content">
             <div class="left">
                <a id="teamA"></a>
@@ -29,7 +29,7 @@
                <a id="teamB"></a>
             </div>
          </div>
-         <img id="logoB" src="/assets/temp.png">
+         <img id="logoB">
       </div>
       <div id="OrangeR2" class="round tbdO"></div>
       <div id="OrangeR1" class="round tbdO"></div>
