--- a/public/possess/index.html
+++ b/public/possess/index.html
@@ -8,19 +8,33 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <div class="background">
-         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/poss.svg" ></object>
-      </div>
+      <div class="content" id="content">
+         <div class="orange" id="orange">
+            <div class="title">
+               <div class="contain">
+                  <a>PTS</a>
+                  <a>ASS</a>
+                  <a>SAVE</a>
+                  <a>STN</a>
+               </div>
+            </div>
+            <div id="playersOrange">
+               
+            </div>
+         </div>
 
-      <div class="content">
-         <div class="div1 blue"><a></a></div>
-         <div class="div2 blue"><a></a></div>
-         <div class="div3 blue"><a></a></div>
-         <div class="div4 blue"><a></a></div>
-         <div class="div5 orange"><a></a></div>
-         <div class="div6 orange"><a></a></div>
-         <div class="div7 orange"><a></a></div>
-         <div class="div8 orange"><a></a></div>
+         <div class="blue" id="blue">
+            <div class="title bTitle">
+               <div class="contain bCont">
+                  <a>PTS</a>
+                  <a>ASS</a>
+                  <a>SAVE</a>
+                  <a>STN</a>
+               </div>
+            </div>
+            <div id="playersBlue">
+            </div>
+         </div>
       </div>
    </body>
 </html>
