--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -9,38 +9,34 @@
    </head>
    <body>
       <div class="background">
-         <object class="svgClass" type="image/svg+xml" data="/assets/overlay/betwen.svg" ></object>
+         <img src="/assets/disc.svg" class="logo"/>
       </div>
-
-      <div class="content">
-         <div class="place">
-            <a id="nbA"></a>
-            <a id="nbB"></a>
-         </div>
-         <div class="nameBar">
-            <div class="containNameStart">
-               <a id="teamNameA"></a>
-            </div>
-            <div class="containNameStartB">
-               <a id="teamNameB"></a>
-            </div>
+      <div id="gradient">
+         <div class="replay-box">
+            <p class="here">YOUR REPLAY HERE</p>
+            <p class="replay">MIDROUND</p>
          </div>
       </div>
-
-      <div class="containScore">
-         <div class="item">
-            <a id="1B"></a>
-            <a id="1O"></a>
-         </div>
-         <div class="item">
-            <a id="2B"></a>
-            <a id="2O"></a>
-         </div>
-         <div class="item">
-            <a id="3B"></a>
-            <a id="3O"></a>
-         </div>
+      <div class="rightTop">
+         <img src="/assets/echo2.png" class="echo"/>
+         <h1>VRML SEASON 5</h1>
       </div>
 
+      <div class="scores">
+         <div class="sc"><a>SCORES</a></div>
+         <div class="top">
+            <div class="RoundB winB"><a>14</a></div>
+            <div class="RoundB looseB"><a>14</a></div>
+            <div class="RoundB"><a>R3</a></div>
+         </div>
+         <div class="bottom">
+            <div class="RoundO looseO"><a>14</a></div>
+            <div class="RoundO winO"><a>14</a></div>
+            <div class="RoundO"><a>R3</a></div>
+         </div>
+         <div class="sc"><a>BEST OF 3</a></div>
+      </div>
+
+      <img src="/assets/temp.png">
    </body>
 </html>
